# dict_parser

./: CMakeLists.txt  CMakeLists.txt.in
include/: dict_parser_lib.h  utils.h
src/: dict_parser_lib.cpp  main.cpp  utils.cpp
test/: test_dict_parser_lib.cpp
test/data/: simple.dict  simple.txt
